--- a/views/pages/explore.ejs
+++ b/views/pages/explore.ejs
@@ -1,8 +1,11 @@
-<%- layout('boilerplate/boilerplate') %> 
-<div class="container input-group input-group-lg">
-    <input type="text" placeholder="Enter your symptoms" class="form-control rounded-start-pill" id="userTextInput">
-    <div class="upload-btn-wrapper">
-        <button class="btn-light rounded-end-pill">Upload a file</button>
-        <input type="file" name="myfile">
+<%- layout('boilerplate/boilerplate') %>
+    <div class="containerr">
+        <img src="logo.png" alt="">
     </div>
-</div>
+    <div class="container containerr input-group input-group-lg">
+        <input type="text" placeholder="Enter your symptoms" class="form-control rounded-start-pill" id="userTextInput">
+        <div class="upload-btn-wrapper">
+            <button class="btn-light rounded-end-pill">Upload a file</button>
+            <input type="file" name="myfile">
+        </div>
+    </div>
